--- a/yzpTab.css
+++ b/yzpTab.css
@@ -1,14 +1,14 @@
-
 yzp-tab ul{
 	list-style:none;
 	margin: 0;
 	padding: 0;
-	background-color: rgb(200,200,200);
+	background-color: rgb(100,200,200);
 	height: 30px;
 	line-height: 30px;
 }
 
 yzp-tab ul li{
+	font-family:"微软雅黑";
 	display:inline;
 	margin: 0;
 	padding: 5px 10px;
@@ -17,15 +17,12 @@ yzp-tab ul li{
 }
 
 yzp-tab ul li:hover{
-	background-color: rgb(100,100,100);
+	background-color: white;
+	color: rgb(100,100,100);
 }
 
 yzp-tab iframe{
 	border: none;
 	width: 100%;
 	height: 500px;
-}
-
-.active{
-	background-color: rgb(100,100,100);
 }
